2000-03-03  bertrand  <bertrand@helixcode.com>

	* camel-stream-b64.c (my_read_encode): fixed state
	0 keep value. 

2000-03-02  bertrand  <bertrand@helixcode.com>

	* camel-stream-b64.c (my_read_encode): don't forget to 
	set the state to 0 after 3.
	(my_read_encode): don't forget to encode, even in state 3.

	* camel-simple-data-wrapper.c: static functions are prefixed 
	with my_ instead of _
	* camel-multipart.c: static functions are prefixed 
	with my_ instead of _
	(my_write_to_stream): commented.
	(my_write_to_stream): warning in case the boudary is set
	but is a zero length string.

	* camel-mime-part.c (camel_mime_part_encoding_from_string): 
	remove debug trace. 
	
	* camel-mime-part.c: Replaced all static functions
	with name begining with _ by the same name begining
	with "my_" to prevent the possible conflicts 
	with system symbols Dan warned us about. 
	
	* camel-stream-b64.c (camel_stream_b64_write_to_stream): 
	use CamelStreamB64 type for the input stream.

	* camel-mime-part.c (_get_content_object): remove 
	debugging trace
	(_write_content_to_stream): implement the b64 
	encoding the new way (that is using camel_stream_b64)

	* camel-data-wrapper.c (my_write_to_stream): 
	fix implementation so that it writes properly
	to the output stream even.

	* camel-stream-b64.c (camel_stream_b64_write_to_stream): 
	fix implementation. 

2000-02-29  bertrand  <bertrand@helixcode.com>

	* camel-stream-b64.c (camel_stream_b64_write_to_stream): new
	utility function. 

	* camel-data-wrapper.c (_write_to_stream): default
	implementation. 

	* gmime-utils.c (_store_header_pair_from_string): 
	revert strange changes. 

	* camel-stream-b64.c (my_read_decode): set eos to true when we
	have read the whole input stream. 
	(my_reset): set eos to FALSE.

2000-02-28  NotZed  <NotZed@HelixCode.com>

	* camel-mime-part.c (_parse_header_pair): Dont free this either.

	* camel-medium.c (_remove_header): Ugh, dont free the header
	before we actually remove it.